1999-08-09  Danilo Almeida  <dalmeida@mit.edu>

	* prompter.c (krb5_prompter_posix): Provide Win32 implementation
	so that kinit and such work under Win32.

1999-08-06  Danilo Almeida  <dalmeida@mit.edu>

	* def_realm.c (krb5_get_default_realm): 
	* hst_realm.c (krb5_get_host_realm): Make sure we have FQDN
	in the case where we use gethostname.

	* def_realm.c (krb5_get_default_realm): Check that we have
	a realm before trying to copy it (since profile_get_string
	may return no error but not get anything).

	* init_os_ctx.c (krb5_get_profile): Fix calling convention.

1999-08-05  Danilo Almeida  <dalmeida@mit.edu>

	* t_std_conf.c (test_get_krbhst): Use krb5_free_krbhst to
	free buffers allocated by krb5_get_krbhst.

	* locate_kdc.c (_krb5_use_dns): Add _krb_use_dns to abstract
	away looking up of whether we use DNS or not in the profile.

	* ktdefname.c (krb5_kt_default_name): Use profile_release_string
	instead of free to free string allocated by profile_get_string.

	* get_krbhst.c (krb5_get_krbhst): Copy results from profile_get_values
	into malloc'ed buffers so we can safely free them later.  Also call
	profile_free_list on the original values.

	* locate_kdc.c (krb5_locate_kdc): 
	* hst_realm.c (krb5_get_host_realm): 
	* def_realm.c (krb5_get_default_realm): Use _krb5_use_dns to figure
	out whether to use DNS or not instead of directly reading the 
	profile in this routine.

	* realm_dom.c (krb5_get_realm_domain): 
	* hst_realm.c (krb5_get_host_realm): 
	* def_realm.c (krb5_get_default_realm): Copy results of 
	profile_get_string into malloc'ed buffer so it can safely be free'd
	later.

	* locate_kdc.c (krb5_locate_srv_conf):
	* def_realm.c (krb5_get_default_realm): 
	* changepw.c (krb5_change_password): 
	* an_to_ln.c (krb5_aname_to_localname): Use profile_free_list
	to free values allocated by profile_get_values.

1999-08-04  Danilo Almeida  <dalmeida@mit.edu>

	* init_os_ctx.c (os_init_paths): Wrap use of ctx->profile_in_memory